Fix background getting cut off

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -97,3 +97,8 @@
 .OrganizationCard {
   background-color: lightgray;
 }
+
+div.FillScreen {
+  min-height: 100vh;
+  height: 100%;
+}
